--- a/styles/style.css
+++ b/styles/style.css
@@ -3,19 +3,14 @@
 body {
     /* feel free to update these css variables for a quick theme */
 
-    --color1: white;
-    --color2: white;
-    --color3: white;
-    --color4: white;
-    --color5: white;
 
     /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
 
-    /* --color1: hsla(349, 69%, 76%, 1);
-    --color2: hsla(207, 67%, 44%, 1);
-    --color3: hsla(200, 61%, 56%, 1);
-    --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
+    --color1: #efeccaff;
+    --color2: #a9cbb7ff;
+    --color3: lightgrey;
+    --color4: #ff934fff;
+    --color5: #5e565aff;
 
     /* --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
@@ -77,6 +72,13 @@ header img {
 
 p {
     margin: var(--gutter);
+    font-size: 40px;
+    color: orangered;
+}
+
+img {
+    padding-top: 20px;
+
 }
 
 footer {
