--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
 body {
     /* feel free to update these css variables for a quick theme */
 
@@ -76,6 +74,10 @@ button {
     border-radius: 2px;
 }
 
+#tigerText {
+    color: #FFD6BA;
+    font-family: 'Square Peg', cursive;
+}
 p {
     margin: var(--gutter);
     font-size: 40px;
